--- a/src/utils/scss/sticky.scss
+++ b/src/utils/scss/sticky.scss
@@ -1,25 +1,24 @@
 @mixin StickyStructure() {
   * {
     &:has([sticky]) {
-      border-radius: 5px;
+      // border-radius: 5px;
     }
   }
 
   [sticky]:not(table) {
     z-index: 1;
     position: sticky;
-    padding: 5px;
     top: 0;
-    &::after {
-      content: "";
-      position: absolute;
-      inset: 0;
-      z-index: -1;
-      border-radius: 5px;
-      // background: rgba(0, 0, 0, 0.3);
-      // mask: linear-gradient(to top, transparent, black 50%);
-      // backdrop-filter: blur(3px);
-    }
+    // &::after {
+    //   content: "";
+    //   position: absolute;
+    //   inset: 0;
+    //   z-index: -1;
+    //   border-radius: 5px;
+    //   background: rgba(0, 0, 0, 0.3);
+    //   mask: linear-gradient(to top, transparent, black 50%);
+    //   backdrop-filter: blur(3px);
+    // }
 
     &[sticky~="bottom"] {
       // mask: linear-gradient(to bottom, transparent, black 50%);
