--- a/src/utils/scss/height.scss
+++ b/src/utils/scss/height.scss
@@ -3,7 +3,7 @@
 
 
 @mixin setHeight($type, $unit) {
-  #{attrContains(height, '&$', $unit#{$type})} {
+  #{attrContains(height, '&$', #{$unit}#{$type})} {
     height: #{$unit}#{$type};
   }
   #{attrContains(height, '&$', min#{$unit}#{$type})} {
@@ -24,9 +24,9 @@
   } 
 
   [height] {
-    // height: $min;
-    // min-height: $default;
-    // max-height: $max;
+
+    @include setHeight('', 'max-content');
+    @include setHeight('','none');
 
     /* (0, 50, 100, 150, ...) */
     @each $i in valuesFromSteps(50, 0, 20) {
