Criando função mod e transição no MathUtils

--- a/src/app/components/lote/modal/lote-modal/lote-modal.component.html
+++ b/src/app/components/lote/modal/lote-modal/lote-modal.component.html
@@ -3,7 +3,7 @@
     <div Width flex="nscl g 50" gap="0">
       <div ColorfulBG></div>
       <div Glass flex="g">
-        <app-lote-filters></app-lote-filters>
+        <lote-filters></lote-filters>
 
 
         <div testFilter>
