--- a/src/app/components/lote/svg/filters/lote-filters/lote-filters.component.html
+++ b/src/app/components/lote/svg/filters/lote-filters/lote-filters.component.html
@@ -1,37 +1,25 @@
 <svg>
   <defs>
-    <filter id="BlueNoise">
-      <!-- [attr.baseFrequency]="transition('noise', 0, 1, 100)"  -->
-        <feTurbulence 
-          type="fractalNoise" 
-          numOctaves="3" 
-          baseFrequency="0.1"
-          stitchTiles="stitch"/>
-
+    <filter id="turbulenceFilter" x="0" y="0" width="100%" height="100%">
+      <feTurbulence id="turbulence" type="turbulence" baseFrequency="0.01" numOctaves="2" seed="2"
+        [attr.baseFrequency]="turbulenceBaseFrequency" />
+      <feDisplacementMap in="SourceGraphic" scale="15" />
     </filter>
-
-    <filter id='Distorce'>
-      <!-- transition('distorce', 0, 0.3, 25, 0.01) -->
-      <feTurbulence
-        id='turbulence'
-        [attr.baseFrequency]="0.1"
-        [attr.numOctaves]='3'
-        [attr.seed]='0'/>
-  
-      <feDisplacementMap 
-        id='displacement'
-        in='SourceGraphic'
-        in2='noise'
-        scale='7'>
+    
+    <filter id="waveFilter" x="0" y="0" width="100%" height="100%">
+      <feDisplacementMap in="SourceGraphic" scale="20">
+        <feTurbulence type="fractalNoise" baseFrequency="0.05" numOctaves="3" seed="1" 
+          [attr.baseFrequency]="waveBaseFrequency" />
       </feDisplacementMap>
-      <feComponentTransfer>
-        <feFuncA type="linear" slope="1"/> <!-- Ajuste a opacidade aqui -->
-      </feComponentTransfer>
+    </filter>
+    
+    <filter id="noiseFilter" x="0" y="0" width="100%" height="100%">
+      <feTurbulence type="fractalNoise" baseFrequency="0.65" numOctaves="3" stitchTiles="stitch" />
+      <feColorMatrix type="matrix" values="0 0 0 0 0
+                                           0 0 0 0 0
+                                           0 0 0 0 0
+                                           0 0 0 0 0" />
+      <feBlend mode="overlay" in="SourceGraphic" />
     </filter>
   </defs>
-  <!-- <rect 
-    width="100%" 
-    height="100%" 
-    filter="url(#Distorce)" 
-    opacity="0.5"/> -->
 </svg>
