--- a/src/app/components/lote/svg/filters/lote-filters/lote-filters.component.html
+++ b/src/app/components/lote/svg/filters/lote-filters/lote-filters.component.html
@@ -1,6 +1,6 @@
 <svg>
   <defs>
-    <filter id="turbulenceFilter" x="0" y="0" width="100%" height="100%">
+    <filter id="turbulenceFilter" x="1" y="0" width="100%" height="100%">
       <feTurbulence id="turbulence" type="turbulence" baseFrequency="0.01" numOctaves="2" seed="2"
         [attr.baseFrequency]="turbulenceBaseFrequency" />
       <feDisplacementMap in="SourceGraphic" scale="15" />
@@ -15,11 +15,15 @@
     
     <filter id="noiseFilter" x="0" y="0" width="100%" height="100%">
       <feTurbulence type="fractalNoise" baseFrequency="0.65" numOctaves="3" stitchTiles="stitch" />
-      <feColorMatrix type="matrix" values="0 0 0 0 0
-                                           0 0 0 0 0
-                                           0 0 0 0 0
-                                           0 0 0 0 0" />
-      <feBlend mode="overlay" in="SourceGraphic" />
+      <feColorMatrix type="matrix" 
+      values="
+        0 0 0 0 0
+        0 0 0 0 0
+        0 0 0 0 0
+        0 0 0 0 0
+      ">
+      </feColorMatrix>
+      <feBlend mode="multiply" in="SourceGraphic" />
     </filter>
   </defs>
 </svg>
