--- a/src/utils/scss/color.scss
+++ b/src/utils/scss/color.scss
@@ -144,3 +144,21 @@
     }
   }
 }
+
+/// Função compatível para ajuste de lightness (clarear/escurecer)
+/// @param {Color} $color - Cor base
+/// @param {Number} $lightness - Valor de ajuste (positivo para clarear, negativo para escurecer)
+/// @return {Color} Cor ajustada
+@function adjust($color, $lightness) {
+  @if function-exists('adjust', 'color') {
+    @return color.adjust($color, $lightness: $lightness);
+  } @else {
+    @if $lightness > 0 {
+      @return lighten($color, $lightness);
+    } @else if $lightness < 0 {
+      @return darken($color, -$lightness);
+    } @else {
+      @return $color;
+    }
+  }
+}
