adicionando função assign em Object ---------------------- ----------------------

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <div class="container">
   <lote-filters></lote-filters>
-  <div style="
+  <!-- <div style="
     background-color: #7c7c7c; 
     color: white; 
     filter: url(#noiseFilter);
     height: 300px;
   ">
-  </div>
+  </div> -->
   <router-outlet/>
 </div>
